# miniopt

./: CMakeLists.txt  license.txt  readme.md
cmake/: packres.cmake
src/: miniopt.c  miniopt.h
test/: CMakeLists.txt  test.c  test2.cpp  test3.c
tool/: CMakeLists.txt  config.h.txt  miniopt.cpp  packres.h  readme.md
